<resources>
    <string name="app_name">Food Mania</string>
    <string name="add_product">Add</string>
    <string name="register_product">Register Product</string>
    <string name="name">Name: </string>
    <string name="description">Description: </string>
    <string name="price">Price: </string>
    <string name="weight">Weight: </string>
    <string name="save">Save the Product</string>
    <string name="add_to_kitchen">Add Kitchen</string>
    <string name="recipes">Recipes</string>
    <string name="availability">Availability</string>
    <string name="display_product">Display Product</string>
    <string name="search">Search</string>
    <string name="edit_product">Edit Product</string>
    <string name="update">Update the Product</string>
</resources>
