<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.naweed.foodmania.MenuActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="187dp"
            app:srcCompat="@drawable/recipefysplash" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.11" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:onClick="registerProductActivity"
            android:text="@string/register_product"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="65dp" />

        <Button
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:onClick="displayProductActivity"
            android:text="@string/display_product"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="113dp" />

        <Button
            android:id="@+id/avail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:onClick="availabilityActivity"
            android:text="@string/availability"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="177dp" />

        <Button
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:onClick="editProductActivity"
            android:text="@string/edit_product"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="335dp" />

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:onClick="searchActivity"
            android:text="@string/search"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="260dp" />

        <Button
            android:id="@+id/recipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:onClick="recipeActivity"
            android:text="@string/recipes"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="394dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
